Fix: 포트폴리오 이미지 수정

--- a/pages/view.html
+++ b/pages/view.html
@@ -33,13 +33,12 @@
 
       <div class="images flex-item">
         <div class="thumbnail">
-          <img src="../img/jpg/backgroud_1.jpg" alt="썸네일">
+          <img src="../img/thumbnail.png" alt="썸네일">
         </div>
         <div class="sub-image">
-          <img src="../img/jpg/backgroud_3.jpg" alt="이미지1">
-          <img src="../img/jpg/backgroud_4.jpg" alt="이미지2">
-          <img src="../img/jpg/backgroud_5.jpg" alt="이미지3">
-          <img src="../img/jpg/backgroud_7.jpg" alt="이미지4">
+          <img src="../img/ex_img_1.png" alt="이미지1">
+          <img src="../img/ex_img_2.png" alt="이미지2">
+          <img src="../img/ex_img_3.png" alt="이미지3">
         </div>
       </div>
 
@@ -51,13 +50,12 @@
       </div>
       <div class="images grid-item">
         <div class="thumbnail">
-          <img src="../img/jpg/backgroud_1.jpg" alt="썸네일">
+          <img src="../img/thumbnail.png" alt="썸네일">
         </div>
         <div class="sub-image">
-          <img src="../img/jpg/backgroud_3.jpg" alt="이미지1">
-          <img src="../img/jpg/backgroud_4.jpg" alt="이미지2">
-          <img src="../img/jpg/backgroud_5.jpg" alt="이미지3">
-          <img src="../img/jpg/backgroud_7.jpg" alt="이미지4">
+          <img src="../img/ex_img_1.png" alt="이미지1">
+          <img src="../img/ex_img_2.png" alt="이미지2">
+          <img src="../img/ex_img_3.png" alt="이미지3">
         </div>
       </div>
       <div class="content">
