--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio_list</title>
+  <title>Brandism | portfolio</title>
 
     <!-- css 연동 -->
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/portfolio-list/list-mo.css">
-    <link rel="stylesheet" href="../css/portfolio-list/list-pc.css">
+    <link rel="stylesheet" href="../css/portfolio/portfolio-mo.css">
+    <link rel="stylesheet" href="../css/portfolio/portfolio-pc.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
@@ -21,22 +21,24 @@
 
     <header>
       <h1>
-          <img src="../img/header-title-logo.svg" alt="로고" />  
+        <a href="/">
+          <img src="../img/header-title-logo.svg" alt="로고" />
+        </a>
       </h1>
       <nav>
           <button id="navOpen" class="mobile-only">
               <img src="../img/header__nav-menu-button.svg" alt="메뉴버튼" />
           </button>
           <ul id="topMenu" class="pc-only header__top-menu">
-              <li class="mobile-only header__nav-close-button">
-                  <button id="navClose">
-                      <img src="../img/header__nav-close-button.svg" alt="닫기" />
-                  </button>
-              </li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/portfolio">Portfolio</a></li>
-              <li><a href="/our">Our</a></li>
-              <li><a href="/contact">Contact</a></li>
+            <li class="mobile-only header__nav-close-button">
+              <button id="navClose">
+                  <img src="../img/header__nav-close-button.svg" alt="닫기" />
+              </button>
+            </li>
+            <li><a href="../pages/about.html">About</a></li>
+            <li><a href="../pages/portfolio.html">Portfolio</a></li>
+            <li><a href="../pages/our.html">Our</a></li>
+            <li><a href="../pages/contact.html">Contact</a></li>
           </ul>
       </nav>
     </header>
@@ -66,14 +68,16 @@
         <div class="box"></div>
       </div>
     </section>
-    <section id="section3" class="section3 section">
-      <div class="sec3-container">
+    <section id="section3" class="section public-section">
+      <div class="container">
         <div class="view view1">
-          <div class="gap"></div>
-          <div class="content">
-            <h2>Branding</h2>
-            <h3>맥키스컴퍼니 선양 리브랜딩 와하하하하하라라라라아아아아아아 아아아아아 </h3>
-          </div>
+          <a href="./view.html">
+            <div class="gap"></div>
+            <div class="content">
+              <h2>Branding</h2>
+              <h3>맥키스컴퍼니 선양 리브랜딩 와하하하하하라라라라아아아아아아 아아아아아 </h3>
+            </div>
+          </a>
         </div>
         <div class="view view2">
           <div class="gap"></div>
@@ -98,9 +102,9 @@
         </div>
       </div>
     </section>
-    <section id="section4" class="section4 section">
+    <section id="section4" class="section public-section">
       <!-- <div class="sec4-wrap"> -->
-        <div class="sec4-container">
+        <div class="container">
           <div class="view view1">
             <div class="gap"></div>
             <div class="content">
@@ -130,20 +134,21 @@
             </div>
           </div>
         </div>
-        <div class="sec4-page">
-           <!-- <div class="button"></div> -->
-           <ul class="pagination">
-            <li><a href="#" class="arrow"><img src="../img/arrow_left.png" alt=""></a></li>
-            <li><a href="#" class="num">1</a></li>
-            <li><a href="#" class="num">2</a></li>
-            <li><a href="#" class="num">3</a></li>
-            <li><a href="#" class="num">4</a></li>
-            <li><a href="#" class="num">5</a></li>
-            <li><a href="#" class="arrow"><img src="../img/arrow_right.png" alt=""></a></li>
-           </ul>
-        </div>
-      <!-- </div> -->
     </section>
+
+    <div class="page">
+      <!-- <div class="button"></div> -->
+      <ul class="pagination">
+       <li><a href="#" class="arrow"><img src="../img/arrow_left.png" alt=""></a></li>
+       <li><a href="#" class="num">1</a></li>
+       <li><a href="#" class="num">2</a></li>
+       <li><a href="#" class="num">3</a></li>
+       <li><a href="#" class="num">4</a></li>
+       <li><a href="#" class="num">5</a></li>
+       <li><a href="#" class="arrow"><img src="../img/arrow_right.png" alt=""></a></li>
+      </ul>
+      <!-- </div> -->
+    </div>
 
     <footer>
       <h2 class="footer__title">
@@ -179,7 +184,7 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="../js/list.js"></script>
+  <script src="../js/portfolio.js"></script>
   <!-- <script src="../components/app.js" type="module"></script> -->
 
 </body>
