--- a/pages/view.html
+++ b/pages/view.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Brandism | view</title>
   <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/up-button.css">
   <link rel="stylesheet" href="../css/fonts.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
@@ -14,6 +15,10 @@
 </head>
 <body>
   <div id="header"></div>
+
+  <aside>
+    <div id="upButton"></div>
+  </aside>
 
   <div class="wrap">
     <div class="category">
@@ -72,5 +77,6 @@
   <div id="footer"></div>
 
   <script src="../components/app.js" type="module"></script>
+  <script type="text/javascript" src="../js/global.js" ></script>
 </body>
 </html>
