--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,7 +6,7 @@
   <title>Brandism | Menu</title>
 
   <!-- css -->
-  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/menu/menu.css">
 
