--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/portfolio/portfolio-mo.css">
     <link rel="stylesheet" href="../css/portfolio/portfolio-pc.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
 
   <div id="wrap">
 
+    <div id="header"></div>
     <header>
       <h1>
         <a href="/">
@@ -150,6 +150,7 @@
       <!-- </div> -->
     </div>
 
+    <div id="footer"></div>
     <footer>
       <h2 class="footer__title">
           <img src="../img/footer-title-logo.svg" alt="브랜디즘 로고">
@@ -184,8 +185,10 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
   <script src="../js/portfolio.js"></script>
-  <!-- <script src="../components/app.js" type="module"></script> -->
+  <script src="../components/app.js" type="module"></script>
+  <script type="text/javascript" src="../js/global.js" ></script>
 
 </body>
 </html>
