--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,8 +7,8 @@
 
   <!-- css -->
   <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/menu/menu.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/menu/menu.css">
 
 </head>
 <body>
