--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <!-- css 연동 -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/fonts.css">
-  <link rel="stylesheet" href="./css/header.css">
-  <link rel="stylesheet" href="./css/up-button.css">
-  <link rel="stylesheet" href="./css/index-pc/index-pc.css">
-  <link rel="stylesheet" href="./css/index-mo/index-mo.css"> 
+  <!-- <link rel="stylesheet" href="./css/header.css"> -->
+  <link rel="stylesheet" href="./css/index-pc.css">
+  <link rel="stylesheet" href="./css/index-mo.css"> 
 </head>
 
 <body>
@@ -51,8 +50,6 @@
       </ul>
     </nav>
   </header>
-
-  <!-- <main id="main">  -->
 
     <section id="section1" class="section section1">
       <div class="sec1_container container">
@@ -267,7 +264,6 @@
       </div>
     </section>
 
-  <!-- </main> -->
 
   <!-- Top 버튼 -->
   <div class="top_btn" id="top_btn">
@@ -283,6 +279,7 @@
 
 <!-- 헤더푸터 / navigation -->
 <script src="./components/app.js" type="module"></script>
-<script type="text/javascript" src="../js/global.js" ></script>
+<script type="text/javascript" src="./js/global.js" ></script>
+
 </body>
 </html>
