--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,18 +10,19 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/header.css">
+      <link rel="stylesheet" href="./css/up-button.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/portfolio/portfolio-mo.css">
-    <link rel="stylesheet" href="../css/portfolio/portfolio-pc.css">
+    <link rel="stylesheet" href="../css/portfolio-mo.css">
+    <link rel="stylesheet" href="../css/portfolio-pc.css">
 </head>
 <body>
 
   <div id="wrap">
 
-    <div id="header"></div>
+    <div id="header"></div>  
     <!-- <header>
       <h1>
-        <a href="/">
+        <a href="../index.html">   // 내가 주소 집어 넣음 Header.js에도
           <img src="../img/header-title-logo.svg" alt="로고" />
         </a>
       </h1>
@@ -153,12 +154,7 @@
     <div id="footer"></div>
 
     <aside>
-      <button id="goTop" class="aside__move-top-button" >
-          <!-- <img src="../img/contact__arrow-button-top.svg"/> -->
-          <svg id="arrow-button-top" width="12" height="17" viewBox="0 0 12 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5.96013 16.0398L5.96013 1.96015M5.96013 1.96015L0.717695 7.20259M5.96013 1.96015L11.0528 7.05281" stroke="black" stroke-width="1.97872"/>
-          </svg>                
-      </button>
+      <div id="upButton"></div>
     </aside>
 
   </div>
